<resources>
    <string name="app_name">RandomChoiceHelperApp</string>
    <string name="buttonGenerateRandomString">Random word</string>
    <string name="buttonGenerateRandomNumber">Random Number</string>
    <string name="buttonChooseRandomString">Choose Random Movie</string>
    <string name="buttonChooseRandomNumber">Choose Random Number</string>
    <string name="outputRandom">Random Number Field</string>
    <string name="outputRandomString">Random String Field</string>
    <string name="first">enter your first choice here</string>
    <string name="second">enter your second choice here</string>
    <string name="third">enter your third choice here</string>
    <string name="fourth">enter your fourth choice here</string>
...
